header component init

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+$base-black: #28262C;
+$base-grey: #998FC7;
+$base-lavanda: #D4C2FC;
+$base-magnolia: #F9F5FF;
+$base-blue: #14248A;
+$base-blue-light: hsl(232, 44%, 41%);
+
+body{
+    margin: 0px;
+}
