rework product list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-nav-menu></app-nav-menu>
-<app-products></app-products>
+<div class="main-container">
+    <app-nav-menu></app-nav-menu>
+    <app-products></app-products>
+</div>
