--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,23 +1,12 @@
-<div class="products-container">
-    <div class="products-container-item">
-        <span class="products-container-item-header">POLYGRAPHY</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">PRINT SERVICES</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">PHOTO SERVICES</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">FOR STUDENTS</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">AFTER-PRINT SERVICES</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">POLYGRAPHY DESIGN</span>
-    </div>
-    <div class="products-container-item">
-        <span class="products-container-item-header">BINDING</span>
-    </div>
+<div class="list-wrapper container">
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
+    <app-product-card></app-product-card>
 </div>
