--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 $base-black: #28262C;
 $base-grey: #998FC7;
@@ -9,4 +9,5 @@ $base-blue-light: hsl(232, 44%, 41%);
 
 body{
     margin: 0px;
+    font-family: 'Raleway', sans-serif;
 }
