edited menu, updated item cards

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -3,18 +3,21 @@
         <span>PCL</span>
     </div>
     <div class="nav-menu-item">
-        <span>PRODUCTS</span>
+        <span>RINGS</span>
     </div>
     <div class="nav-menu-item">
-        <span>OUR WORKS</span>
+        <span>PENDANTS</span>
     </div>
     <div class="nav-menu-item">
-        <span>PRICE LIST</span>
+        <span>EARRINGS</span>
     </div>
     <div class="nav-menu-item">
-        <span>TO CLIENTS</span>
+        <span>OTHER</span>
     </div>
     <div class="nav-menu-item">
         <span>CONTACTS</span>
+    </div>
+    <div class="menu-basket">
+        <img src="../../assets/images/menu/basket.png">
     </div>
 </div>
