--- a/src/app/nav-menu/nav-menu.component.scss
+++ b/src/app/nav-menu/nav-menu.component.scss
@@ -28,3 +28,12 @@
         }
     }
 }
+
+.menu-basket{
+    margin-left: auto;
+    margin-right: 10px;
+
+    &:hover{
+        cursor: pointer;
+    }
+}
