--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -1,6 +1,7 @@
 <div class="card-wrapper">
     <img src="../../../assets/images/menu/empty.png" class="image">
-    <span class="card-label">ItemName</span>
+    <span class="price-label">14.99 BYN</span>
+    <span class="card-label">This is item description. Item-asdfasd</span>
     <div class="buttons-panel">
         <span class="buy-button">BUY</span>
         <img src="../../../assets/images/menu/white-heart.svg" class="heart-img">
