--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="main-container">
     <app-nav-menu></app-nav-menu>
-    <app-products></app-products>
+    <router-outlet></router-outlet>
 </div>
