--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <div class="nav-menu">
     <div class="nav-menu-logo">
-        <span>PCL</span>
+        <span routerLink="/products">PCL</span>
     </div>
     <div class="nav-menu-item">
         <span>RINGS</span>
@@ -15,7 +15,7 @@
         <span>OTHER</span>
     </div>
     <div class="nav-menu-item">
-        <span>CONTACTS</span>
+        <span routerLink="/contacts">CONTACTS</span>
     </div>
     <div class="menu-basket">
         <img src="../../assets/images/menu/basket.png">
